@@ -1,3 +1,8 @@
+Mon Jul 25 13:46:38 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>
+
+	* ext/openssl/lib/openssl/x509.rb: Cosmetic change: move definition
+	  introduced in r30152 to x509-internal.rb.
+
 Mon Jul 25 13:09:42 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>
 
 	* ext/openssl/ossl_ssl.c (ossl_ssl_shutdown): Avoid randomly generated
